--- a/src/pages/main.html
+++ b/src/pages/main.html
@@ -1,1 +1,41 @@
-hello
+
+<!-- Small Navigation -->
+<div class="title-bar" data-responsive-toggle="nav-menu" data-hide-for="medium">
+    <a class="logo-small show-for-small-only" href="#"><img src="../assets/img/test-logo.png" /></a>
+    <button class="menu-icon" type="button" data-toggle></button>
+    <div class="title-bar-title">Menu</div>
+</div>
+<!-- Medium-Up Navigation -->
+<nav class="top-bar" id="nav-menu">
+    <div class="logo-wrapper hide-for-small-only">
+        <div class="logo">
+            <img src="../assets/img/test-logo.png">
+        </div>
+    </div>
+
+    <!-- Left Nav Section -->
+    <div class="top-bar-left">
+        <ul class="vertical medium-horizontal menu">
+            <li><a href="#">Upload</a></li>
+            <li><a href="#">Grades</a></li>
+        </ul>
+    </div>
+
+    <!-- Right Nav Section -->
+    <div class="top-bar-right">
+        <ul class="vertical medium-horizontal dropdown menu" data-dropdown-menu>
+            <li class="has-submenu">
+                <a href="#">Settings</a>
+                <ul class="submenu menu vertical medium-horizontal" data-submenu>
+                    <li><a href="#">View your profile</a></li>
+                    <li><a href="#">Change your profile info</a></li>
+                    <li><a href="#">Change your privacy settings</a></li>
+                    <li><a href="#">Change your password</a></li>
+                </ul>
+            </li>
+            <li class="has-submenu">
+                <a href="login.html">Log out</a>
+            </li>
+        </ul>
+    </div>
+</nav>
