--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -45,13 +45,10 @@
             </select>
         </label>
         <p>
-            <input type="submit" id="login" class="button expanded" value="Register" />
+            <input type="submit" id="register" class="button expanded" value="Register" />
             <a href="#" id="cancelRegisterBtn" class="cancel-button">Cancel</a>
         </p>
     </div>
     </form>
 </div>
-</div>
-<div id="thankYouForRegisteringModal" class="small reveal" aria-hidden="true" role="dialog">
-    <div>thank you for registering</div>
 </div>
