Added file upload page, fixed navbar, confed Foundation to give me special js on special sites.

--- a/src/pages/main.html
+++ b/src/pages/main.html
@@ -8,16 +8,16 @@
 <!-- Medium-Up Navigation -->
 <nav class="top-bar" id="nav-menu">
     <div class="logo-wrapper hide-for-small-only">
-        <div class="logo">
+        <a class="logo" href="main.html">
             <img src="../assets/img/test-logo.png">
-        </div>
+        </a>
     </div>
 
     <!-- Left Nav Section -->
     <div class="top-bar-left">
         <ul class="vertical medium-horizontal menu">
-            <li><a href="#">Upload</a></li>
-            <li><a href="#">Grades</a></li>
+            <li><a href="uploadHW.html">Upload</a></li>
+            <li><a href="gradingTable.html">Grades</a></li>
         </ul>
     </div>
 
