fixed logo not showing

--- a/src/pages/main.html
+++ b/src/pages/main.html
@@ -1,7 +1,7 @@
 
 <!-- Small Navigation -->
 <div class="title-bar" data-responsive-toggle="nav-menu" data-hide-for="medium">
-    <a class="logo-small show-for-small-only" href="#"><img src="../assets/img/test-logo.png" /></a>
+    <a class="logo-small show-for-small-only" href="#"><img src="/assets/img/test-logo.png" /></a>
     <button class="menu-icon" type="button" data-toggle></button>
     <div class="title-bar-title">Menu</div>
 </div>
@@ -9,7 +9,7 @@
 <nav class="top-bar" id="nav-menu">
     <div class="logo-wrapper hide-for-small-only">
         <a class="logo" href="main.html">
-            <img src="../assets/img/test-logo.png">
+            <img src="/assets/img/test-logo.png">
         </a>
     </div>
 
