Grading page student and teacher, design changes.

--- a/src/pages/gradingTableStudent.html
+++ b/src/pages/gradingTableStudent.html
@@ -67,15 +67,13 @@
                             <li><a href="#" id="uxThird">Total</a></li>
                         </ul>
                     </li>
-                    <li><a href="#" id="totalGrade">Total</a></li>
+                    <li><a href="#">Total</a></li>
                 </ul>
             </li>
         </ul>
     </div>
 </div>
-<div class="small-4 large-centered columns">
-    <input type="text" id="searchStudent" placeholder="Look for a student">
-</div>
+
 <div>
-    <table class='hover' id="providerTable"></table>
+    <table class='hover' id="providedTable"></table>
 </div>
