css changes, fixed the broken highlighting

--- a/src/pages/gradingTable.html
+++ b/src/pages/gradingTable.html
@@ -73,8 +73,7 @@
         </ul>
     </div>
 </div>
-<div class="small-4 large-centered columns">
-    <input type="text" id="searchStudent" placeholder="Look for a student">
+<div class="small-4 large-centered columns" id="searchStudentDiv">
 </div>
 <div>
     <table class='hover' id="providerTable"></table>
