Some changes and new pages, nothing special. WOrking on making a assignment form for teachers.

--- a/src/pages/gradingTable.html
+++ b/src/pages/gradingTable.html
@@ -15,8 +15,8 @@
     <!-- Left Nav Section -->
     <div class="top-bar-left">
         <ul class="vertical medium-horizontal menu">
-            <li><a href="uploadHW.html">Upload</a></li>
-            <li><a href="gradingTable.html">Grades</a></li>
+            <li><a href="uploadTask.html">Upload</a></li>
+            <li><a href="gradingTable.html">Results</a></li>
         </ul>
     </div>
 
