--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -5,10 +5,11 @@
                 <div class="row column log-in-form">
                     <h4 class="text-center">Log in to Gradr</h4>
                     <label>Email
-                        <input type="email" id="loginEmail" placeholder="Log in using e-mail">
+                        <input type="email" id="loginEmail" required pattern ="email" placeholder="Log in using e-mail">
                     </label>
                     <label>Password
-                        <input type="password" id="loginPassword" placeholder="Password" required pattern=".{8,}">
+                        <input type="password" id="loginPassword" placeholder="Password" required pattern=".{8,}" aria-describedby="pwHelpText">
+                        <p class="help-text" id="pwHelpText">Password must consist of at least 8 characters!</p>
                     </label>
                     <p>
                         <input type="submit" id="login" class="button expanded" value="log in" />
