--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -5,7 +5,7 @@
                 <div class="row column log-in-form">
                     <h4 class="text-center">Log in to Gradr</h4>
                     <label>Email
-                        <input type="email" id="loginEmail" required pattern ="email" placeholder="Log in using e-mail">
+                        <input type="email" id="loginEmail" placeholder="Log in using e-mail">
                     </label>
                     <label>Password
                         <input type="password" id="loginPassword" placeholder="Password" required pattern=".{8,}" aria-describedby="pwHelpText">
@@ -41,8 +41,8 @@
         </label>
         <label>Select your role
             <select id="selectRole" placeholder="Select your role">
-                <option>Student</option>
-                <option>Teacher</option>
+                <option value = "student">Student</option>
+                <option value = "teacher">Teacher</option>
             </select>
         </label>
         <p>
