--- a/src/pages/uploadTask.html
+++ b/src/pages/uploadTask.html
@@ -1,13 +1,13 @@
 <!-- Small Navigation -->
 <div class="title-bar" data-responsive-toggle="nav-menu" data-hide-for="medium">
-    <a class="logo-small show-for-small-only" href="main.html"><img src="assets/img/test-logo.png" /></a>
+    <a class="logo-small show-for-small-only" href="mainTeacher.html"><img src="assets/img/test-logo.png" /></a>
     <button class="menu-icon" type="button" data-toggle></button>
     <div class="title-bar-title">Menu</div>
 </div>
 <!-- Medium-Up Navigation -->
 <nav class="top-bar" id="nav-menu">
     <div class="logo-wrapper hide-for-small-only">
-        <a class="logo" href="main.html">
+        <a class="logo" href="mainTeacher.html">
             <img src="assets/img/test-logo.png">
         </a>
     </div>
@@ -24,23 +24,44 @@
     <div class="top-bar-right">
         <ul class="vertical medium-horizontal dropdown menu" data-dropdown-menu>
             <li class="has-submenu">
-                <a href="#">Settings</a>
+                <a href="#">Other</a>
                 <ul class="submenu menu vertical medium-horizontal" data-submenu>
-                    <li><a href="#">View your profile</a></li>
-                    <li><a href="#">Change your profile info</a></li>
-                    <li><a href="#">Change your privacy settings</a></li>
-                    <li><a href="#">Change your password</a></li>
-                </ul>
+
+                    <li><a href="#">Edit Class</a></li>
+                    <li><a href="#">Edit groups</a></li>
+                    <li><a href="#">Start class</a></li>
+                    <li><a href="#">Add group</a></li>
+                    <ul class="vertical medium-horizontal dropdown menu" data-dropdown-menu>
+                        <li class="has-submenu">
+                            <a href="#">Settings</a>
+                            <ul class="submenu menu vertical medium-horizontal" data-submenu>
+                                <li><a href="#">View your profile</a></li>
+                                <li><a href="#">Change your profile info</a></li>
+                                <li><a href="#">Change your privacy settings</a></li>
+                                <li><a href="#">Change your password</a></li>
+                            </ul>
+                        </li>
+                    </ul>
             </li>
+            </ul>
             <li class="has-submenu">
                 <a href="login.html">Log out</a>
             </li>
-        </ul>
     </div>
 </nav>
 <div class="row">
     <div class="medium-6 medium-centered large-3 large-centered columns">
         <form id="upload" method="post" action="upload.php" enctype="multipart/form-data">
+            <div>
+                <label for="setTitle">Title</label>
+                <input type="text">
+                <label for="selectClass">Pick the class for whom the assignment is for</label>
+                <select name="selectClass" id="selectClass">
+                    <option value="machineLearning">Machine learning</option>
+                    <option value="probability">Probability and Statistics</option>
+                    <option value="userInterfaces">User Interfaces</option>
+                </select>
+            </div>
             <div id="drop">
                 Drop Here
                 <p class="header-notice">Or</p>
@@ -51,13 +72,13 @@
             <ul id="preview">
                 <!-- The file uploads will be shown here -->
             </ul>
-            <ul>
+            <div>
                 <label for="assignmentDescription">Description
                     <textarea name="assignmentDescription" id="assignmentDescription" cols="32" rows="8" placeholder="Write content here."></textarea>
                 </label>
-            </ul>
+            </div>
             <div>
-                <input type="submit" id="submitForm" class="button" value="submit">
+                <input type="submit" id="submitForm" class="button expanded" value="submit">
             </div>
 
         </form>
