--- a/src/pages/uploadHW.html
+++ b/src/pages/uploadHW.html
@@ -16,7 +16,7 @@
     <div class="top-bar-left">
         <ul class="vertical medium-horizontal menu">
             <li><a href="uploadHW.html">Upload</a></li>
-            <li><a href="gradingTable.html">Grades</a></li>
+            <li><a href="gradingTableStudent.html">Grades</a></li>
         </ul>
     </div>
 
