--- a/src/pages/main.html
+++ b/src/pages/main.html
@@ -1,4 +1,3 @@
-
 <!-- Small Navigation -->
 <div class="title-bar" data-responsive-toggle="nav-menu" data-hide-for="medium">
     <a class="logo-small show-for-small-only" href="#"><img src="assets/img/test-logo.png" /></a>
@@ -39,3 +38,7 @@
         </ul>
     </div>
 </nav>
+
+<div style=";margin-right:50%;margin-left:50%;"><h3>LOREM THE IPSUM</h3></div>
+<div style="color:orange;margin-right:50%;margin-left:50%;"><h4>NEEDS CARDS AND TEMPLATING</h4></div>
+<div style="color:red;margin-right:50%;margin-left:50%;"><h4>BECAUSE THIS IS WHERE THE NEWS SHOULD BE</h4></div>
